Results added to docs

--- a/docs/badania.tex
+++ b/docs/badania.tex
@@ -2,8 +2,59 @@
 
 \section{Przeprowadzone badania}
 
+Badania przeprowadzono dla 5 różnych liczb neuronów w warstwie ukrytej: 20, 30, 40, 50, 60.
+
 \section{Porównanie algorytmów}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\linewidth]{img/bp_elm_20.pdf}
+	\label{Rysunek}
+	\caption{20 neuronów w warstwie ukrytej - porównanie obu algorytmów}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\linewidth]{img/bp_elm_30.pdf}
+	\label{Rysunek}
+	\caption{30 neuronów w warstwie ukrytej - porównanie obu algorytmów}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\linewidth]{img/bp_elm_40.pdf}
+	\label{Rysunek}
+	\caption{40 neuronów w warstwie ukrytej - porównanie obu algorytmów}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\linewidth]{img/bp_elm_50.pdf}
+	\label{Rysunek}
+	\caption{50 neuronów w warstwie ukrytej - porównanie obu algorytmów}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\linewidth]{img/bp_elm_60.pdf}
+	\label{Rysunek}
+	\caption{60 neuronów w warstwie ukrytej - porównanie obu algorytmów}
+\end{figure}
 
 \section{Selekcja cech}
 
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\linewidth]{img/features.pdf}
+	\label{Rysunek}
+	\caption{Selekcja cech po częstotliwości wybierania}
+\end{figure}
+
 \section{Macierz pomyłek}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\linewidth]{img/conf_matrix.pdf}
+	\label{Rysunek}
+	\caption{Macierz pomyłek}
+\end{figure}
