--- a/docs/podsumowanie.tex
+++ b/docs/podsumowanie.tex
@@ -1,5 +1,7 @@
 \chapter{Wnioski}
 \begin{itemize}
+	\item{Sieci neuronowe mogą stanowić potężne narzędzie w walce z chorobą.}
+	\item{Parametry sieci należy dobrać odpowiednio do problemu, aby unikać zjawiska przeuczenia.}
 	\item{Sieci neuronowe potrzebują sporej ilości danych uczących, aby poprawnie generalizować problemy.}
 	\item{ELM daje bardzo zbliżone jakościowo wyniki do sieci neuronowych ze wsteczną propagacją, jednocześnie proces uczenia jest o wiele szybszy.}
 	\item{Wbrew początkowej intuicji, kilka najlepszych cech zebranych razem wcale nie musi dawać najlepszych wyników.}
