Apps docs finished

--- a/docs/aplikacja.tex
+++ b/docs/aplikacja.tex
@@ -40,6 +40,43 @@ Na aplikację skłąda się kilka modułów:
     \item \texttt{consts.py} - zawiera ustawienia badań i parametry dla algorytmów.
 \end{itemize}
 
+Po uruchomieniu badania przez moduł \texttt{main.py}, w module \texttt{algorithms.py} odbywa się wykonywanie owych badań. Najpierw, na zbiorze zawierającym dane uczące \texttt{X} oraz tablicę wyników \texttt{y} wykonywana jest 10-krotna walidacja krzyżowa przy pomocy \texttt{KFold} z modułu \texttt{sklearn.model\_selection}, w wyniku której otrzymywane są indeksy elementów podzielonych na dwa podzbiory - zbiór uczący i testowy:
+
+\begin{verbatim}
+ KFold(n_folds=n_folds).split(X, y):
+\end{verbatim}
+
+W tym momencie następuje też iteracja przez wszystkie wyniki walidacji, gdzie w każdej iteracji odbywa się selekcja \texttt{n}-cech, gdzie \texttt{n} to liczba cech, dla której aktualnie wykonywane są badania:
+
+\begin{verbatim}
+ SelectKBest(k=k_best_features).fit(X, y).get_support(indices=True)
+\end{verbatim}
+
+Na tak wyselekcjonowanych cechach odbywa się uruchomienie dwóch algorytmów - uczonego metodą wstecznej propagacji błędu (algorytm \textit{BP}) oraz jego szybka wersja losowa \textit{Extreme Learning Machines} (algorytm \textit{ELM}). Najpierw tworzona jest instancja klasyfikatora algorytmu \textit{BP} (opis parametrów użytych do badania znajduje się w rozdziale o badaniach), następnie odbywa się jego uczenie przekazując do funkcji \texttt{fit} zbiór uczący. Na końcu dokonywane jest mierzenie testowanie algorytmu przekazując do funkcji \texttt{score} zbiór testowy.
+
+\begin{verbatim}
+ clf = MLPClassifier(...)
+ clf.fit(X_train, y_train)
+ score = clf.score(X_test, y_test)
+\end{verbatim}
+
+Dla algorytmu \texttt{ELM} procedura wygląda bardzo podobnie:
+
+\begin{verbatim}
+ elmc = ELMClassifier(...)
+ elmc.fit(X_train, y_train)
+ score = elmc.score(X_test, y_test)
+\end{verbatim}
+
+\newpage
+
+Na końcu dla każdego algorytmu wyliczana jest macierz pomyłek, korzystając z \texttt{confusion\_matrix} z modułu \texttt{sklearn.metrics}.
+
+\begin{verbatim}
+conf_matrix = confusion_matrix(y_test, clf.predict(X_test))
+conf_matrix = confusion_matrix(y_test, elmc.predict(X_test))
+\end{verbatim}
+
 \section{Wdrożenie}
 
 W celu przygotowania aplikacji do działania, należy mając zainstalowaną wersję \texttt{Pythona 3.5} dodać katalog projektu do zmiennej środowiskowej \texttt{PYTHONPATH}. Aby tego dokonać, w katalogu projektu trzeba uruchomić komendę:
