--- a/docs/aplikacja.tex
+++ b/docs/aplikacja.tex
@@ -17,7 +17,7 @@ Wszystkie wykorzystane moduły i ich przeznaczenie widnieją na poniższej tabel
         \toprule
         \textbf{Nazwa} & \textbf{Wersja} & \textbf{Opis} \\
         \midrule
-        \texttt{scikit-learn} & 0.18 & sieć neuronowa uczona metodą wstecznej propagacji błędu, selekcja cech, walidacja krzyżowa, macierz błędu. \\
+        \texttt{scikit-learn} & 0.18 & Sieć neuronowa uczona metodą wstecznej propagacji błędu, selekcja cech, walidacja krzyżowa, macierz błędu. \\
         \texttt{Python-ELM} & 0.3 & \textit{Extreme Learning Machines}. \\
         \texttt{numpy} & 1.11.0 & Obliczenia numeryczne. \\
         \texttt{matplotlib} & 1.5.1 & Tworzenie wykresów. \\
@@ -52,7 +52,7 @@ W tym momencie następuje też iteracja przez wszystkie wyniki walidacji, gdzie 
  SelectKBest(k=k_best_features).fit(X, y).get_support(indices=True)
 \end{verbatim}
 
-Na tak wyselekcjonowanych cechach odbywa się uruchomienie dwóch algorytmów - uczonego metodą wstecznej propagacji błędu (algorytm \textit{BP}) oraz jego szybka wersja losowa \textit{Extreme Learning Machines} (algorytm \textit{ELM}). Najpierw tworzona jest instancja klasyfikatora algorytmu \textit{BP} (opis parametrów użytych do badania znajduje się w rozdziale o badaniach), następnie odbywa się jego uczenie przekazując do funkcji \texttt{fit} zbiór uczący. Na końcu dokonywane jest mierzenie testowanie algorytmu przekazując do funkcji \texttt{score} zbiór testowy.
+Na tak wyselekcjonowanych cechach odbywa się uruchomienie dwóch algorytmów - uczonego metodą wstecznej propagacji błędu (algorytm \textit{BP}) oraz jego szybka wersja losowa \textit{Extreme Learning Machines} (algorytm \textit{ELM}). Najpierw tworzona jest instancja klasyfikatora algorytmu \textit{BP} (opis parametrów użytych do badania znajduje się w rozdziale o badaniach), następnie odbywa się jego uczenie przekazując do funkcji \texttt{fit} zbiór uczący. Na końcu dokonywana jest klasyfikacja algorytmu przekazując do funkcji \texttt{score} zbiór testowy.
 
 \begin{verbatim}
  clf = MLPClassifier(...)
