--- a/docs/wstep.tex
+++ b/docs/wstep.tex
@@ -1,7 +1,7 @@
 \chapter{Wstęp}
 \section{Cele i założenia projektowe}
 Celem projektu było zapoznanie się z tematem uczenia maszynowego, a konkretnie z sieciami neuronowymi.
-Realizacja projektu miała umożliwić zrozumienie zasady działania oraz porównanie wydajności sieci neuronowych używających propagacji wstecznej oraz wariantu o nazwie \textit{Extreme Learning Machines,} na podstawie analizy danych z badań cytologicznych.
+Realizacja projektu miała umożliwić zrozumienie zasady działania oraz porównanie wydajności sieci neuronowych używających propagacji wstecznej oraz wariantu o nazwie \textit{Extreme Learning Machines,} na podstawie analizy danych pacjentów.
 \section{Wstęp teoretyczny}
 Rozwój uczenia maszynowego w ostatnich latach jest bardzo ważny z punktu widzenia wielu dziedzin, jednak szczególnie ważny dla medycyny.
 
