--- a/docs/podsumowanie.tex
+++ b/docs/podsumowanie.tex
@@ -2,7 +2,7 @@
 \begin{itemize}
 	\item{Sieci neuronowe mogą stanowić potężne narzędzie w walce z chorobą.}
 	\item{Parametry sieci należy dobrać odpowiednio do problemu, aby unikać zjawiska przeuczenia.}
-	\item{Dane, z którymi przyszło nam pracować nie były zbalansowane -- 76\% przypadków znajdowało się w klasie G2 -- co powodowało problemy przy uczeniu klasyfikatora, który wszystkie przypadki klasyfikował jako G2.}
+	\item{Dane, z którymi przyszło nam pracować nie były zbalansowane -- 76\% przypadków znajdowało się w klasie G2 -- co powodowało problemy przy uczeniu klasyfikatora.}
 	\item{Sieci neuronowe potrzebują sporej ilości danych uczących, aby poprawnie generalizować problemy.}
 	\item{ELM daje bardzo zbliżone jakościowo wyniki do sieci neuronowych ze wsteczną propagacją, jednocześnie proces uczenia jest o wiele szybszy.}
 	\item{Wbrew początkowej intuicji, kilka najlepszych cech zebranych razem wcale nie musi dawać najlepszych wyników.}
