--- a/docs/main.tex
+++ b/docs/main.tex
@@ -27,7 +27,7 @@
 \usepackage{amssymb}                    % rozszerzenie amsmath
 \usepackage{relsize}					% zmiana wielkości wzorów matematycznych
 \usepackage{gensymb}                    % znaki specjalne
-\usepackage{hyperref} 					% do linkowania cytatów, floatów
+\usepackage[hidelinks,pagebackref=true,backref=false]{hyperref}
 \usepackage{url}                        % generowanie linków ze znakami specjalnymi
 \usepackage{tikz}                       % modelowanie wykresów
 \usepackage{longtable}                  % rozkładanie tabel na kilka stron
